nav bar settings changed

--- a/index.html
+++ b/index.html
@@ -285,5 +285,6 @@
     </div>
     <a href="#contact" class="hire-me-button">Hire me →</a>
   </section>
+  <script src="script.js"></script>
 </body>
 </html>
