--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Santa's Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Santa Claus</title>
+
+  <head>
+    <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon/favicon-32x32.png" type="image/png" sizes="32x32">
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
+    <link rel="icon" href="assets/favicon/android-chrome-192x192.png" sizes="192x192">
+    <link rel="manifest" href="assets/favicon/site.webmanifest">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  
   <!-- Navbar -->
   <div class="navbar">
     <ul>
