--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="skill-content">
             <h3>GPS-Free Route Optimization 🚀</h3>
           </div>
-          <img src="assets/GPS.jpeg" alt="Advanced Sleigh Aerodynamics" class="skill-image" />
+          <img src="assets/skills_gps.jpeg" alt="Advanced Sleigh Aerodynamics" class="skill-image" />
           <a href="#skills" class="navigate-button">➔</a>
         </div>
   
@@ -73,7 +73,7 @@
           <div class="skill-content">
             <h3>Advanced Sleigh Aerodynamics 🎅</h3>
           </div>
-          <img src="assets/GPS.jpeg" alt="Advanced Sleigh Aerodynamics" class="skill-image" />
+          <img src="assets/skills_areodynamic.jpeg" alt="Advanced Sleigh Aerodynamics" class="skill-image" />
           <a href="#skills" class="navigate-button">➔</a>
         </div>
   
@@ -82,7 +82,7 @@
           <div class="skill-content">
             <h3>Wrapping Pro (Aesthetic AF) 🎁</h3>
           </div>
-          <img src="assets/GPS.jpeg" alt="Wrapping Pro" class="skill-image" />
+          <img src="assets/skills_wrapping.jpeg" alt="Wrapping Pro" class="skill-image" />
           <a href="#skills" class="navigate-button">➔</a>
         </div>
       </div>
@@ -96,7 +96,7 @@
       <div class="achievements-grid">
         <!-- Achievement 1 -->
         <div class="achievement-card">
-          <img src="assets/Nice Guy.jpeg" alt="Nice Santa">
+          <img src="assets/achie_verified.jpeg" alt="Nice Santa">
           <h3>Verified Nice Guy</h3>
           <p class="date">10 Nov, 2023</p>
           <p class="description">Consistently voted #1 in spreading joy, Christmas spirit, and absolutely no coal.</p>
@@ -104,7 +104,7 @@
 
         <!-- Achievement 2 -->
         <div class="achievement-card">
-          <img src="assets/Nice Guy.jpeg" alt="Nice Santa">
+          <img src="assets/achie_speedrun.jpeg" alt="Nice Santa">
           <h3>Speedrun World Record</h3>
           <p class="date">09 Oct, 2023</p>
           <p class="description">100 million homes in 24 hours. Yeah, I’m fast. 🏅🎅</p>
@@ -112,7 +112,7 @@
 
         <!-- Achievement 3 -->
         <div class="achievement-card">
-          <img src="assets/Nice Guy.jpeg" alt="Nice Santa">
+          <img src="assets/achie_trustfriend.jpeg" alt="Nice Santa">
           <h3>Global Trust Fund</h3>
           <p class="date">13 Aug, 2023</p>
           <p class="description">World’s most generous philanthropist. Giving feels good, fam. 🌍💰</p>
@@ -133,13 +133,13 @@
           <a href="#" class="btn">View Project</a>
         </div>
         <div class="project-image">
-          <img src="assets/Nice Guy.jpeg" alt="Project Joyride">
+          <img src="assets/project_joyride.jpeg" alt="Project Joyride">
         </div>
       </div>
       <div class="project">
         <div class="project-image">
           <div class="project-image-odd">
-            <img src="assets/Nice Guy.jpeg" alt="Naughty or Nice 2.0">
+            <img src="assets/project_naughtynice.jpeg" alt="Naughty or Nice 2.0">
           </div>
         </div>
         <div class="project-text">
@@ -155,7 +155,7 @@
            <a href="#" class="btn">View Project</a>
         </div>
         <div class="project-image">
-          <img src="assets/Nice Guy.jpeg" alt="Project Joyride">
+          <img src="assets/project_elfcare.jpeg" alt="Project Joyride">
         </div>
       </div>
     </div>
@@ -173,7 +173,7 @@
     <div class="testimonials-container">
       <div class="testimonial">
         <div class="profile">
-          <img src="assets/Nice Guy.jpeg" alt="Global Logistics Expert">
+          <img src="assets/test_global.jpeg" alt="Global Logistics Expert">
           <h3>Global Logistics Expert</h3>
           <div class="rating">
             <span>★★★★★</span> 5.0
@@ -189,7 +189,7 @@
   
       <div class="testimonial">
         <div class="profile">
-          <img src="assets/Nice Guy.jpeg" alt="CEO, Toy Workshop Inc.">
+          <img src="assets/test_ceo.jpeg" alt="CEO, Toy Workshop Inc.">
           <h3>CEO, Toy Workshop Inc.</h3>
           <div class="rating">
             <span>★★★★★</span> 5.0
@@ -204,7 +204,7 @@
 
       <div class="testimonial">
         <div class="profile">
-          <img src="assets/Nice Guy.jpeg" alt="Random Baker">
+          <img src="assets/test_random.jpeg" alt="Random Baker">
           <h3>Random Baker</h3>
           <div class="rating">
             <span>★★★★★</span> 5.0
@@ -220,7 +220,7 @@
 
       <div class="testimonial">
         <div class="profile">
-          <img src="assets/Nice Guy.jpeg" alt="Global Supply Chain Specialist">
+          <img src="assets/test_globalsupply.jpeg" alt="Global Supply Chain Specialist">
           <h3>Global Supply Chain Specialist</h3>
           <div class="rating">
             <span>★★★★★</span> 5.0
@@ -235,7 +235,7 @@
 
       <div class="testimonial">
         <div class="profile">
-          <img src="assets/Nice Guy.jpeg" alt="Lead Reindeer, Dasher">
+          <img src="assets/test_reindeer.jpeg" alt="Lead Reindeer, Dasher">
           <h3>Lead Reindeer, Dasher</h3>
           <div class="rating">
             <span>★★★★★</span> 5.0
